--- a/mi-api/mi-eureka-server/src/main/resources/application.yml
+++ b/mi-api/mi-eureka-server/src/main/resources/application.yml
@@ -15,4 +15,4 @@ eureka:
   server:
     enable-self-preservation: true
     renewalPercentThreshold: 0 #设置更新率阈值
-    eviction-interval-timer-in-ms: 20000 #毫秒
+    eviction-interval-timer-in-ms: 20000 #毫秒 有关注册服务调用
