--- a/mi-api/mi-eureka-consumer/pom.xml
+++ b/mi-api/mi-eureka-consumer/pom.xml
@@ -26,6 +26,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- 断路由引入-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
