--- a/mi-api/mi-eureka-client/src/main/resources/application.yml
+++ b/mi-api/mi-eureka-client/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:1000/eureka/
+      defaultZone: http://mione:1000/eureka/,http://mitwo:2000/eureka/
